--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -61,6 +61,19 @@ h1, h2, h3, h4, h5, h6 {
     color: #ffd200;
 }
 
+th{
+    padding: 0 0 20px 0;
+    font-size: 20px;
+    border-bottom: 3px solid #1d1a39;
+}
+
+td {
+    margin: 0 5px;
+    padding: 0 20px;
+    border-left: 1px solid #1d1a39;
+
+}
+
 form {
     max-width: 400px;
     margin: 0 auto;
@@ -73,6 +86,7 @@ form {
 
 table {
     max-width: 90%;
+
     margin: 0 auto;
     padding: 20px;
     background-color: #390e8c;
