--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -154,3 +154,27 @@ a:hover {
     background-color: #1d1a39;
     color:#fdab13
 }
+
+.card {
+    display: none;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 80%;
+    margin: 20px auto;
+}
+
+.card img {
+    max-width: 80%;
+    border-radius: 10px;
+}
+
+.card h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.card p {
+    margin: 5px 0;
+}
