oculto codigo en datos

--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -199,3 +199,7 @@ a:hover {
 .card-details p strong {
     font-weight: bold; /* Negrita para el campo de precio */
 }
+
+.hidden {
+    display: none;
+}
