--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -78,7 +78,7 @@ form {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #390e8c;
+    background-color: #790779;
     border: 1px solid lightslategray;
     border-radius: 5px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
@@ -89,7 +89,7 @@ table {
 
     margin: 0 auto;
     padding: 20px;
-    background-color: #390e8c;
+    background-color: #790779;
     border: 1px solid lightslategray;
     border-radius: 5px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
