--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -7,7 +7,9 @@
 
 body {
     font-family: Mon;
-    background-color: #00c0f2;
+    background-image: url(../imagenes/backcac.jpeg);
+    background-size: cover;
+    box-shadow: inset 0 0 0 2000px rgba(247, 245, 245, );
     color:white;
 }
 
@@ -58,7 +60,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
-    color: #0e0d0d;
+    color: #ffffff;
 }
 
 th{
