--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -175,7 +175,7 @@ a:hover {
 .card-content {
     display: flex;
     align-items: flex-start;
-    background-color: #00c0f2;
+    background-color: #00c2f200;
 }
 
 .card img {
